kubernetes/core/proxies/hass-proxy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-hass
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy-hass
      app.kubernetes.io/instance: proxy-hass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy-hass
        app.kubernetes.io/instance: proxy-hass
    spec:
      containers:
        - name: proxy
          image: ghcr.io/beryju/istio-proxy
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 25m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-hass
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app.kubernetes.io/name: proxy-hass
    app.kubernetes.io/instance: proxy-hass
  type: ClusterIP
---
# yaml-language-server: $schema=https://chkpwd.github.io/iac/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-hass
spec:
  hostnames: ["ha.chkpwd.com"]
  parentRefs:
    - name: public
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: proxy-hass
          port: 8888
